fix(home): fix theme color in PWA; update(home): better text wrapping strategy; update(markdown): closer letter spaceing in phone

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -19,17 +19,17 @@ $width-page: 1.2rem;
         $f2: $f * (6.4 - .4 * $k);
         $f3: $f * (5.7 - .7 * $k);
         font-size: $font-lg;
-        margin-right: $font-lg * .8 / $k;
-        line-height: 2 - ($k - 1) / 3;
-        shape-outside: polygon(
-            0 0,
-            $f1 0,
-            $f1 33%,
-            $f2 33%,
-            $f2 67%,
-            $f3 67%,
-            $f3 100%,
-            0 100%);
+        margin-right: $font-lg * .4 / $k;
+        line-height: 2.4 - $k * .45;
+        //shape-outside: polygon(
+        //    0 0,
+        //    $f1 0,
+        //    $f1 33%,
+        //    $f2 33%,
+        //    $f2 67%,
+        //    $f3 67%,
+        //    $f3 100%,
+        //    0 100%);
       }
       .poem {
         font-size: $font-sm / $k;
@@ -48,7 +48,7 @@ $width-page: 1.2rem;
 
   .page {
     position: relative;
-    box-shadow: white 0 0 0 $width-page, $color-main 0 0 4rem 0;
+    box-shadow: white 0 0 0 $width-page, gray 0 0 4rem 0;
     background: white;
     @extend %flex;
   }
@@ -74,6 +74,7 @@ $width-page: 1.2rem;
         .favor {
           font-family: $font-effect-en;
           float: left;
+          clear: both;
           color: $color-main;
         }
         font-family: $font-effect-zh;
